projetos/oke/marquez/deployment-api-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marquez
  namespace: marquez
spec:
  template:
    spec:
      containers:
      - name: marquez
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "1000m"
            memory: "2Gi"
